2009-02-19 Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver

	* src/mod_pubsub/mod_pubsub.erl: backport last changes from trunk
	* src/mod_pubsub/node_mb.erl: Likewise
	* src/mod_pubsub/node_buddy.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_club.erl: Likewise

2009-02-18 Pablo Polvorin <pablo.polvorin@process-one.net>

	* src/ejabberd_auth.erl: Fix: for legacy authentication, the Digest
	parameters could be 'undefined'.

	* src/mod_muc/mod_muc_room.erl: Typo.

	* src/ejabberd_c2s.erl: Remove comment for an already done TODO.

	* src/web/ejabberd_web_admin.erl, src/web/ejabberd_web_admin.hrl: 
	Many exmpp related fixes. Fix a bug when displaying users lists, 
	if we can't access the 'offline_msg' mnesia table (using mod_offline_odbc).
	This fix should be temporal, we should find a better way to manage this
	situation.  The webadmin is usable again.

	* src/web/ejabberd_http.erl: Language must be in binary() format.

	* src/translate.erl: Remove a debug call to io:format/2.

	* src/ejabberd_sm.erl, src/mod_configure.erl, src/mod_disco.erl:
	ejabberd_sm:get_user_resources/2 returns resources as binary().

	* src/ejabberd_sm.erl: Bugfix in get_user_info/3.

	* src/mod_announce.erl: get_title/2 accepts node argument in binary()
	or list() format.

2009-02-13 Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth.erl: prevent from calling 
	get_vh_registered_users/2 when not available

2009-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/web/ejabberd_web.erl, src/web/ejabberd_http.erl: Add
	documentation stub for some types. This will be filled later.

	* src/jlib.erl: Document the short JID type.

	* src/mod_roster.erl: Document the type of the argument(s) and the