@@ -279,8 +279,8 @@ pop_offline_messages(Ls, User, Server)
 remove_user(User, Server) 
         when is_binary(User), is_binary(Server) ->
     try
-	LUser = exmpp_stringprep:nodeprep(User),
-	LServer = exmpp_stringprep:nameprep(Server),
+	LUser = binary_to_list(exmpp_stringprep:nodeprep(User)),
+	LServer = binary_to_list(exmpp_stringprep:nameprep(Server)),
 	Username = ejabberd_odbc:escape(LUser),
 	odbc_queries:del_spool_msg(LServer, Username)
     catch
